# poker-eval

./: .gitignore  CMakeLists.txt
cmake/: SystemCheck.cmake
examples/: CMakeLists.txt  eval.c  fish.c  five_card_hands.c  hcmp2.c  hcmpn.c  pokenum.c  seven_card_hands.c  usedecks.c
include/: deck.h  deck_std.h  enumerate.h  poker_config.h.in  poker_defs.h
include/inlines/: evx5.h  evx7.h
lib/: CMakeLists.txt  evx_generate.c
poker-eval/: CMakeLists.txt  combinations.h  config.h.in  deck.c  deck.cpp  deck.h  deck_astud.cpp  deck_astud.h  deck_joker.cpp  deck_joker.h  deck_std.c  deck_std.cpp  deck_std.h  enumdefs.h  enumerate.c  enumerate.cpp  enumerate.h  enumord.h  evx.c  evx_defs.h  evx_generate.c  evx_generate.cpp  evx_preamble.cfrag  game_joker.h  game_std.h  handval_low.h  lowball.c  mktab_astud.cpp  mktab_basic.c  mktab_evx.cpp  mktab_joker.cpp  mktab_lowball.cpp  mktab_packed.cpp  mktable.c  mktable.cpp  mktable.h  mktable_utils.c  poker_defs.h  poker_wrapper.cpp  poker_wrapper.h  (+6 more)
poker-eval/inlines/: eval.h  eval_astud.h  eval_joker.h  eval_joker_low.h  eval_joker_low8.h  eval_low.h  eval_low27.h  eval_low8.h  eval_omaha.h  eval_type.h  evx5.h  evx7.h
tests/: run.in
